More minor style changes

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <head> 
   <link href='/stylesheets/compiled/screen.css' rel='stylesheet'> 
   <link href='/stylesheets/jquery-ui.css' rel='stylesheet'> 
+  <link href='/stylesheets/compiled/jquery_ui_custom.css' rel='stylesheet'> 
 </head> 
 <body> 
   <div id='container'> 
