Feedback is being displayed on the merchant page.

--- a/public/merchant_dashboard.html
+++ b/public/merchant_dashboard.html
@@ -15,9 +15,12 @@
       <div class='content'>
         <div class='ui-widget'>
           <div id="dashboard-loading">Loading...</div>
-          <ul id="feedback">
+          <div id="feedback" style="display: none;">
+            <h3>Feedback</h3>
+            <ul id="feedback-list">
 
-          </ul>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
@@ -28,7 +31,7 @@
   <script src='/javascripts/compiled/vendor/require-jquery.js?v=1'></script>
   <script type='text/javascript'>
     //<![CDATA[
-      require({ baseUrl: "/javascripts/compiled" }, ["order!vendor/underscore", "order!vendor/backbone", "order!merchants/merchant_dashboard_controller", "order!merchants/models/merchant"], function(underscore, backbone, MerchantDashboardController, Merchant) {
+      require({ baseUrl: "/javascripts/compiled" }, ["order!vendor/underscore", "order!vendor/backbone", "order!merchants/merchant_dashboard_controller", "order!merchants/models/merchant", "order!demo/demo_controller"], function(underscore, backbone, MerchantDashboardController, Merchant, DemoController) {
 
           var the_ram = new Merchant({
             id: '4ce0c42ec8bb95d50d000001'
@@ -37,6 +40,10 @@
           the_ram.fetch()
 
           var controller = new MerchantDashboardController({ merchant: the_ram });
+
+          var demoController = new DemoController();
+
+          Backbone.history.start();
 
       });
     //]]>
