Cleaned up name and added address in merchant sidebar

--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,9 @@
       
         // This will be pulled dynamically (eventually)
         var member = new Member({
+          address: {
+            state: 'IN'
+          },
           accounts: [
             { name: "Checking", amount: "$1,234.56" },
             { name: "Savings", amount: "$34,582.34" }
