--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,7 @@
         // This will be pulled dynamically (eventually)
         var member = new Member({
           address: {
+            city: 'Fishers',
             state: 'IN'
           },
           accounts: [
